Add logic to find transactions by name in the backend