@@ -45,6 +45,7 @@ public class TransactionServiceTest {
         TransactionEntity transactionEntity1 = TransactionEntity.builder()
                 .idTransaction(564326L)
                 .idTransferAccount(312421)
+                .receiverName("Maria")
                 .transactionAmount(new BigDecimal("87523.45"))
                 .transactionTimestamp(LocalDateTime.of(2022, Month.OCTOBER, 12, 13, 12, 0))
                 .build();
@@ -52,6 +53,7 @@ public class TransactionServiceTest {
         TransactionEntity transactionEntity2 = TransactionEntity.builder()
                 .idTransaction(87686L)
                 .idTransferAccount(312421)
+                .receiverName("Maria")
                 .transactionAmount(new BigDecimal("7657.75"))
                 .transactionTimestamp(LocalDateTime.of(2022, Month.JANUARY, 20, 20, 12, 0))
                 .build();
@@ -59,6 +61,7 @@ public class TransactionServiceTest {
         TransactionEntity transactionEntity3 = TransactionEntity.builder()
                 .idTransaction(6546L)
                 .idTransferAccount(312421)
+                .receiverName("Maria")
                 .transactionAmount(new BigDecimal("6546734.76"))
                 .transactionType(TransactionType.ONLINE_PAYMENT)
                 .transactionTimestamp(LocalDateTime.of(2022, Month.DECEMBER, 11, 13, 12, 0))
@@ -67,6 +70,7 @@ public class TransactionServiceTest {
         TransactionEntity transactionEntity4 = TransactionEntity.builder()
                 .idTransaction(67582L)
                 .idTransferAccount(312421)
+                .receiverName("Maria")
                 .transactionAmount(new BigDecimal("5464.76"))
                 .transactionType(TransactionType.DEPOSIT)
                 .transactionTimestamp(LocalDateTime.of(2022, Month.FEBRUARY, 11, 13, 12, 0))
@@ -97,9 +101,26 @@ public class TransactionServiceTest {
 
         assertAll(
                 () -> assertThat(transactionList.getSize()).isEqualTo(3),
-                () -> assertEquals(Arrays.asList(564326L, 6546L, 67582L), transactionList.stream().map(TransactionEntity::getIdTransaction).toList())
+                () -> assertEquals(List.of(564326L, 6546L, 67582L), transactionList.stream().map(TransactionEntity::getIdTransaction).toList())
         );
     }
+
+    @Test
+    @DisplayName("Should return all transactionEntity with the specific idAccount using the repository")
+    void getByIdAccountAndName() {
+        Mockito.when(transactionRepository.getByIdAccountAndName(343, "ma", 1))
+                .thenReturn(Optional.of(new PageImpl<>(
+                        List.of(transactionEntityList.get(1), transactionEntityList.get(2)))));
+
+        Page<TransactionEntity> transactionList = transactionService.getByIdAccountAndName(343, "ma", 1).get();
+
+        assertAll(
+                () -> assertThat(transactionList.getSize()).isEqualTo(2),
+                () -> assertEquals(List.of(87686L, 6546L), transactionList.stream().map(TransactionEntity::getIdTransaction).toList()),
+                () -> assertEquals(List.of("Maria", "Maria"), transactionList.stream().map(TransactionEntity::getReceiverName).toList())
+        );
+    }
+
 
     @Test
     @DisplayName("Should return all transactionEntity with the specific idAccount and year using the repository")
